# django-cookiecutter

./: .gitignore  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  package.json  pyproject.toml  vite.config.mjs
{{cookiecutter.project_slug}}/config/: settings.py  urls.py
{{cookiecutter.project_slug}}/static/js/: vendor.js
{{cookiecutter.project_slug}}/templates/: base.html  example.html
{{cookiecutter.project_slug}}/{{cookiecutter.django_app_name}}/: apps.py
