[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "django-vite>=3.1.0",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "django-stubs-ext>=5.2.0",
    "django-types>=0.20.0",
    "pyright>=1.1.400",
    "ruff>=0.11.10",
]
